rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-10.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: "template:template_key"
builtin_constants:
  e:
    template_key: template_key
    default_value: ~
  pi:
    template_key: template_key
    default_value: ~
  i:
    template_key: template_key
    default_value: ~
custom_constants: "template:template_key"
variables:
  nonjmetext§: "random(1 .. 1#-0.1)"
variables_test:
  condition:
    template_key: template_key
    default_value: ~
  max_runs:
    template_key: template_key
    default_value: ~
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: nothing
    parameters: "template:template_key"
preamble:
  js:
    template_key: template_key
    default_value: ~
  css:
    template_key: template_key
    default_value: ~
navigation:
  can_regenerate:
    template_key: template_key
    default_value: ~
  show_title_page:
    template_key: template_key
    default_value: ~
  confirm_when_leaving:
    template_key: template_key
    default_value: ~
extensions:
  chemistry:
    template_key: template_key
    default_value: ~
  download_text_file:
    template_key: template_key
    default_value: ~
  eukleides:
    template_key: template_key
    default_value: ~
  geogebra:
    template_key: template_key
    default_value: ~
  graphs:
    template_key: template_key
    default_value: ~
  jsx_graph:
    template_key: template_key
    default_value: ~
  linear_algebra:
    template_key: template_key
    default_value: ~
  linear_codes:
    template_key: template_key
    default_value: ~
  optimisation:
    template_key: template_key
    default_value: ~
  permutations:
    template_key: template_key
    default_value: ~
  polynomials:
    template_key: template_key
    default_value: ~
  quantities:
    template_key: template_key
    default_value: ~
  random_person:
    template_key: template_key
    default_value: ~
  stats:
    template_key: template_key
    default_value: ~
  sqlite:
    template_key: template_key
    default_value: ~
  text:
    template_key: template_key
    default_value: ~
  written_number:
    template_key: template_key
    default_value: ~
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  template_key: template_key
  default_value: ~

