rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-15.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  template_key: template_key
  default_value: ~
advice:
  template_key: template_key
  default_value: ~
parts:
  template_key: template_key
  default_value: ~
builtin_constants:
  e: false
  pi: false
  i: false
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
variables_test:
  condition: x^5
  max_runs: 2
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: string
    parameters:
      template_key: template_key
      default_value: ~
preamble:
  js: "file:path/to/file"
  css: "file:path/to/file"
navigation:
  can_regenerate: false
  show_title_page: false
  confirm_when_leaving: false
extensions:
  chemistry: false
  download_text_file: false
  eukleides: false
  geogebra: false
  graphs: false
  jsx_graph: false
  linear_algebra: false
  linear_codes: false
  optimisation: false
  permutations: false
  polynomials: false
  quantities: false
  random_person: false
  stats: false
  sqlite: false
  text: false
  written_number: false
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Display
    rules:
      broken_as_fractions: false
      mixed_fractions: false
      flat_fractions: false
      vector_as_row: false
      always_show_multiplication_sign: false
      use_dot_as_multiplication_sign: false
      matrices_without_parentheses: false

