rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-18.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: "template:template_key"
builtin_constants:
  e: ~
  pi: ~
  i: ~
custom_constants: "template:template_key"
variables:
  nonjmetext§:
    definition: "file:path/to/file"
    description: nonjmetext§
    template_type: anything
grouped_variables:
  nonjmetext§:
    nonjmetext§:
      definition: "file:path/to/file"
      description: nonjmetext§
      template_type: anything
variables_test:
  condition: ~
  max_runs: ~
functions:
  nonjmetext§:
    definition:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: "template:template_key"
    parameters: "template:template_key"
preamble:
  js: ~
  css: ~
navigation:
  can_regenerate: ~
  show_title_page: ~
  confirm_when_leaving: ~
extensions:
  chemistry: ~
  download_text_file: ~
  eukleides: ~
  geogebra: ~
  graphs: ~
  jsx_graph: ~
  linear_algebra: ~
  linear_codes: ~
  optimisation: ~
  permutations: ~
  polynomials: ~
  quantities: ~
  random_person: ~
  stats: ~
  sqlite: ~
  text: ~
  written_number: ~
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  nonjmetext§: "template:template_key"

