rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-19.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts:
  template_key: template_key
  default_value: ~
builtin_constants: "template:template_key"
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§:
    definition: "template:template_key"
    description: "template:template_key"
    template_type: list_of_numbers
grouped_variables:
  nonjmetext§:
    nonjmetext§:
      definition: "template:template_key"
      description: "template:template_key"
      template_type: list_of_numbers
variables_test: "template:template_key"
functions:
  nonjmetext§:
    definition: "file:path/to/file"
    language: jme
    output_type:
      template_key: template_key
      default_value: ~
    parameters:
      template_key: template_key
      default_value: ~
preamble: "template:template_key"
navigation: "template:template_key"
extensions: "template:template_key"
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    template_key: template_key
    default_value: ~

