rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-2.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: "template:template_key"
builtin_constants:
  e: "template:template_key"
  pi: "template:template_key"
  i: "template:template_key"
custom_constants: "template:template_key"
variables:
  nonjmetext§: 1.2
variables_test:
  condition: "template:template_key"
  max_runs: "template:template_key"
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: decimal
    parameters: "template:template_key"
preamble:
  js: "template:template_key"
  css: "template:template_key"
navigation:
  can_regenerate: "template:template_key"
  show_title_page: "template:template_key"
  confirm_when_leaving: "template:template_key"
extensions:
  chemistry: "template:template_key"
  download_text_file: "template:template_key"
  eukleides: "template:template_key"
  geogebra: "template:template_key"
  graphs: "template:template_key"
  jsx_graph: "template:template_key"
  linear_algebra: "template:template_key"
  linear_codes: "template:template_key"
  optimisation: "template:template_key"
  permutations: "template:template_key"
  polynomials: "template:template_key"
  quantities: "template:template_key"
  random_person: "template:template_key"
  stats: "template:template_key"
  sqlite: "template:template_key"
  text: "template:template_key"
  written_number: "template:template_key"
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: "template:template_key"
      cancel_unit_factors: "template:template_key"
      cancel_unit_powers: "template:template_key"
      cancel_unit_denominators: "template:template_key"
      cancel_zero_factors: "template:template_key"
      omit_zero_terms: "template:template_key"
      cancel_zero_powers: "template:template_key"
      cancel_powers_with_base_zero: "template:template_key"
      collect_numbers: "template:template_key"
      constants_first: "template:template_key"
      collect_sqrt_products: "template:template_key"
      collect_sqrt_divisions: "template:template_key"
      cancel_sqrt_square: "template:template_key"
      evaluate_powers_of_numbers: "template:template_key"
      rewrite_to_no_leading_minus: "template:template_key"
      simplify_fractions: "template:template_key"
      simplify_trigonometric: "template:template_key"
      collect_terms: "template:template_key"
      collect_powers_of_common_factors: "template:template_key"
      collect_like_fractions: "template:template_key"
      order_canonical: "template:template_key"
      expand_brackets: "template:template_key"

